# SimpleMusic

./: local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/docwei/simplemusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/docwei/simplemusic/: CutAudioActivity.java  MainActivity.java  TimeUtil.java
app/src/main/res/layout/: activity_cut.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/docwei/simplemusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mediaplayer/: CMakeLists.txt  build.gradle
mediaplayer/src/main/: AndroidManifest.xml
mediaplayer/src/main/cpp/: AndroidLog.h  CallJava.cpp  CallJava.h  FFmpegDecode.cpp  FFmpegDecode.h  PcmBean.cpp  PcmBean.h  PcmBufferQueue.cpp  PcmBufferQueue.h  PlayStatus.cpp  PlayStatus.h  SimpleAudio.cpp  SimpleAudio.h  SimpleQueue.cpp  SimpleQueue.h  SimpleVideo.cpp  SimpleVideo.h  native-lib.cpp
mediaplayer/src/main/cpp/soundtouch/include/: STTypes.h
mediaplayer/src/main/java/com/docwei/mediaplayer/: Demo.java  MusicPlayer.java  TimeInfo.java
mediaplayer/src/main/java/com/docwei/mediaplayer/bean/: Mute.java
mediaplayer/src/main/java/com/docwei/mediaplayer/listener/: OnCompleteListener.java  OnErrorListener.java  OnLoadListener.java  OnPcmInfoListener.java  OnPlayStatusListener.java  OnPreparedListener.java  OnTimeInfoListener.java  OnTimeRecordListener.java  OnVolumnDBListener.java
mediaplayer/src/main/java/com/docwei/mediaplayer/opengl/: OriGlSurfaceView.java  OriRender.java  ShaderUtil.java
mediaplayer/src/main/java/com/docwei/mediaplayer/util/: VideoUtil.java
